# GDFlecs

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: apple_silicon.cmake  configure_gdextension.cmake  flecs.cmake  gdextension.cmake  godot-cpp.cmake  platform.cmake
demo/: icon.svg.import  node.gd  node.tscn  project.godot
demo/resources/: new_component.tres
demo/scenes/: test.tscn
demo/scripts/: node.gd  world.gd
src/: component.cpp  component.hpp  gdexample.cpp  gdexample.hpp  register_types.cpp  register_types.hpp  world.cpp  world.hpp
templates/: gdextension-template.gdextension
